not quite what I set out to do on this branch, but added more about content and fiddled with css. merge into main and then will start new branch to explore css-grid

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   title: "samantha csik"
   navbar:
     title: false
-    logo: images/logos/logo_greentext_cropped.png
+    logo: images/logos/nunito/creamBG_greenText/logo_nunito_cropped.png
     right:
       - href: index.qmd
         text: home
@@ -40,7 +40,7 @@ format:
     theme: 
       - green_theme.scss
     css: styles.css
-    mainfont: Montserrat
+    mainfont: Nunito
     toc: true
 
 
