--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   navbar:
     title: false
     logo: images/logos/nunito/creamBG_greenText/logo_nunito_cropped.png
+    logo-alt: "The name 'sam csik' written in green text. Above 'csik' is a dark green horizontal line, above which sits a green chick icon."
     right:
       - href: index.qmd
         text: home
