--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,15 +40,15 @@ website:
       - icon: twitter
         href: https://twitter.com/SamanthaCsik
   reader-mode: true
-  repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
-  repo-actions: [edit, issue]
+  # repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
+  # repo-actions: [edit, issue]
 
 format:
   html:
     page-layout: full
     theme: 
       - green_theme.scss
-    css: styles.css
+    # css: styles.css
     mainfont: Nunito
     toc: true
 
