--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
   google-analytics: 
     tracking-id: "UA-242992767-1"
     anonymize-ip: true
-  title: "samantha csik"
+  # title: "samantha csik"
   navbar:
     title: false
     logo: images/logos/nunito/creamBG_greenText/logo_nunito_cropped.png
