working on draft of quarto blog post

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
       - href: CV/SCsik_CV.pdf
         text: cv
       - icon: github
-        href: https://github.com/samanthacsik
+        href: https://github.com/samanthacsik/samanthacsik.github.io
       - icon: twitter
         href: https://twitter.com/SamanthaCsik
   page-footer: 
