--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,13 +39,14 @@ website:
         href: https://github.com/samanthacsik
       - icon: twitter
         href: https://twitter.com/SamanthaCsik
-  reader-mode: true
+  # reader-mode: true
   # repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
   # repo-actions: [edit, issue]
 
 format:
   html:
     page-layout: full
+    sidebar: false
     theme: 
       - green_theme.scss
     # css: styles.css
