--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,10 @@ website:
         href: https://github.com/samanthacsik/samanthacsik.github.io
       - icon: twitter
         href: https://twitter.com/SamanthaCsik
+      - icon: linkedin
+        href: https://www.linkedin.com/in/samanthacsik/
+      - icon: envelope
+        href: mailto:scsik@ucsb.edu
   page-footer: 
     background: light
     left: 
@@ -40,6 +44,10 @@ website:
         href: https://github.com/samanthacsik
       - icon: twitter
         href: https://twitter.com/SamanthaCsik
+      - icon: linkedin
+        href: https://www.linkedin.com/in/samanthacsik/
+      - icon: envelope
+        href: mailto:scsik@ucsb.edu
   # reader-mode: true
   # repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
   # repo-actions: [edit, issue]
