--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,17 +37,17 @@ website:
         href: mailto:scsik@ucsb.edu
   page-footer: 
     background: light
-    left: 
-      - "Copyright 2021, Samantha Csik"
-    right: 
-      - icon: github
-        href: https://github.com/samanthacsik
-      - icon: twitter
-        href: https://twitter.com/SamanthaCsik
-      - icon: linkedin
-        href: https://www.linkedin.com/in/samanthacsik/
-      - icon: envelope
-        href: mailto:scsik@ucsb.edu
+    left: Copyright 2021, Samantha Csik
+    right: This website is built with {{< fa heart title="a heart" >}} and [Quarto](https://quarto.org/)
+    # right: 
+    #   - icon: github
+    #     href: https://github.com/samanthacsik
+    #   - icon: twitter
+    #     href: https://twitter.com/SamanthaCsik
+    #   - icon: linkedin
+    #     href: https://www.linkedin.com/in/samanthacsik/
+    #   - icon: envelope
+    #     href: mailto:scsik@ucsb.edu
   # reader-mode: true
   # repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
   # repo-actions: [edit, issue]
