strava dashboard project added; outline for openscapes website and bren student data explorer added

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
       - about.qmd
       - href: talks_workshops.qmd
         text: talks & workshops
+      - href: projects.qmd
+        text: projects
       - posts.qmd
       - resources.qmd
       - href: CV/SCsik_CV.pdf
