--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ website:
   # title: "samantha csik"
   navbar:
     title: false
-    logo: images/logos/nunito/creamBG_greenText/logo_nunito_cropped.png
+    logo: images/logos/logo-dark.png
     logo-alt: "The name 'sam csik' written in green text. Above 'csik' is a dark green horizontal line, above which sits a green chick icon."
     right:
       - href: index.qmd
