figured out how to update about page link button color; renamed green-theme.scss to styles.scss; deleted styles.css

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,7 +59,7 @@ format:
     page-layout: full
     sidebar: false
     theme: 
-      - green_theme.scss
+      - styles.scss
     # css: styles.css
     mainfont: Nunito
     toc: true
