updated map; added open-graph: true to _quarto.yml to see what it does

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
 
 website:
+  open-graph: true
   site-url: https://samanthacsik.github.io/
   # cookie-consent: 
   #   type: express 
