--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,10 +29,10 @@ website:
       - href: projects.qmd
         text: projects
       - posts.qmd
-      - resources.qmd
-      - href: CV/SCsik_CV.pdf
-        text: cv
-        target: _blank
+      # - resources.qmd
+      # - href: CV/SCsik_CV.pdf
+      #   text: cv
+      #   target: _blank
       - icon: github
         href: https://github.com/samanthacsik/samanthacsik.github.io
         target: _blank
