--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,21 +33,26 @@ website:
       # - href: CV/SCsik_CV.pdf
       #   text: cv
       #   target: _blank
+      - text: get in touch!
+        menu:
+          - icon: twitter
+            text: Twitter
+            href: https://twitter.com/SamanthaCsik
+            target: _blank
+          - icon: linkedin
+            text: LinkedIn
+            href: https://www.linkedin.com/in/samanthacsik/
+            target: _blank
+          - icon: envelope
+            text: email
+            href: mailto:scsik@ucsb.edu
       - icon: github
         href: https://github.com/samanthacsik/samanthacsik.github.io
         target: _blank
-      - icon: twitter
-        href: https://twitter.com/SamanthaCsik
-        target: _blank
-      - icon: linkedin
-        href: https://www.linkedin.com/in/samanthacsik/
-        target: _blank
-      - icon: envelope
-        href: mailto:scsik@ucsb.edu
   page-footer: 
     background: light
     left: Copyright 2021, Samantha Csik
-    right: This website is built with {{< fa heart title="a heart" >}}, {{< fa brands r-project title="R Project" >}} and [Quarto](https://quarto.org/)
+    right: This website is built with {{< fa heart title="a heart" >}}, [{{< fa brands github title="GitHub octocat logo" >}}](https://github.com/samanthacsik/samanthacsik.github.io){target=_blank}, [{{< fa brands r-project title="R Project" >}}](https://www.r-project.org/about.html){target=_blank} and [Quarto](https://quarto.org/){target=_blank}
     # right: 
     #   - icon: github
     #     href: https://github.com/samanthacsik
