--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,17 +3,14 @@ project:
   output-dir: docs
 
 website:
-  open-graph: true
+  # reader-mode: true
+  # repo-url: https://github.com/samanthacsik/samanthacsik.github.io
+  # repo-actions: [edit, issue]
   site-url: https://samanthacsik.github.io/
-  # cookie-consent: 
-  #   type: express 
-  #   style: headline
-  #   palette: dark
   favicon: images/chick.png
   google-analytics: 
     tracking-id: "G-LW03VL0YTS" #"UA-242992767-1"
     anonymize-ip: true
-  # title: "samantha csik"
   navbar:
     title: false
     logo: images/logos/logo-dark.png
@@ -29,10 +26,6 @@ website:
       - href: projects.qmd
         text: projects
       - posts.qmd
-      # - resources.qmd
-      # - href: CV/SCsik_CV.pdf
-      #   text: cv
-      #   target: _blank
       - text: get in touch!
         menu:
           - icon: twitter
@@ -51,20 +44,8 @@ website:
         target: _blank
   page-footer: 
     background: light
-    left: Copyright 2021, Samantha Csik
+    left: © Copyright 2021, Samantha Csik
     right: This website is built with {{< fa heart title="a heart" >}}, [{{< fa brands github title="GitHub octocat logo" >}}](https://github.com/samanthacsik/samanthacsik.github.io){target=_blank}, [{{< fa brands r-project title="R Project" >}}](https://www.r-project.org/about.html){target=_blank} and [Quarto](https://quarto.org/){target=_blank}
-    # right: 
-    #   - icon: github
-    #     href: https://github.com/samanthacsik
-    #   - icon: twitter
-    #     href: https://twitter.com/SamanthaCsik
-    #   - icon: linkedin
-    #     href: https://www.linkedin.com/in/samanthacsik/
-    #   - icon: envelope
-    #     href: mailto:scsik@ucsb.edu
-  # reader-mode: true
-  # repo-url: https://github.com/samanthacsik/samanthacsik-quarto-website
-  # repo-actions: [edit, issue]
 
 format:
   html:
@@ -72,7 +53,6 @@ format:
     sidebar: false
     theme: 
       - styles.scss
-    # css: styles.css
     mainfont: Nunito
     toc: true
 
