added info on drafts; updated some screenshots; added some callout boxes. more to review

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -6,3 +6,11 @@ freeze: auto
 
 # Enable banner style title blocks
 title-block-banner: true
+
+# my author info
+author:
+  - name: Samantha Csik
+    url: https://samanthacsik.github.io/
+    orcid: 0000-0002-5300-3075
+    affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
+    affiliation-url: https://ucsb-meds.github.io/ 
