--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
 
 website:
+  title: "Sam Csik"
   # reader-mode: true
   # repo-url: https://github.com/samanthacsik/samanthacsik.github.io
   # repo-actions: [edit, issue]
