--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -1,4 +1,7 @@
-# options specified here will apply to all posts in this folder
+
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+##        options specified here will apply to all posts in this folder     ----
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 # freeze computational output ----
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
