updated _metadata.yml for posts listing with new bren affiliation url

--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -16,4 +16,4 @@ author:
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) 
-    affiliation-url: https://ucsb-meds.github.io/ 
+    affiliation-url: https://bren.ucsb.edu/masters-programs/master-environmental-data-science
